src/styles/title.scss
#Title {
    padding: 10rem 0;
    position: sticky;

    max-height: 100vh;
    top: 0;

    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    line-height: 1;
    width: 50%;

    h1 {
        font-weight: 700;
        font-size: $font-size-mega;
        letter-spacing: -1px;
    }
    h2 {
        font-weight: bold;
        font-size: $font-size-large;
    }
    p {
        font-size: $font-size-normal;
        line-height: 1.15;
        color: $text-color-alt;
        max-width: 500px;
        .quote-desc {
            font-size: $font-size-small;
            font-weight: 600;
            // letter-spacing: -0.25px;
            // text-transform: uppercase;
            // color: $text-color-alt;
        }
    }
    #Nav {
        margin-top: 7rem;
    }
    .links {
        margin-top: auto;
        display: flex;
        gap: 1rem;
        a {
            color: $text-color-alt;
            &:hover {
                color: $text-color;
            }
        }
        .separating-dot {
            color: $text-color-alt;
        }
    }
}

